# MultipleViewPipeline

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  INSTALL  README  THIRDPARTYLICENSES  TODO  config.cmake.example
octmvp/: CMakeLists.txt  init_mvp.m.in  test_mvp.m.in
octmvp/m/: AlbedoBox.m  AlgorithmVar.m  Datum.m  GeoReference.m  LighterResult.m  ObjectiveHelper.m  OrbitalImageCollection.m  PatchBox.m  PatchResult.m  PixelResult.m  TileResult.m  globals.m  quat2rot.m  weight_patches.m
octmvp/src/: CMakeLists.txt  MathSupport.h  _back_project.cc  _do_homog.cc  _init_mvp.cc
octmvp/src/tests/: CMakeLists.txt  TestMathSupport.cxx  gtest_main.cc
octmvp/wrap/: AlbedoBox.m  AlgorithmVar.m  Correlator.m  Lighter.m  Objective.m  ObjectiveHelper.m  PatchBox.m  PixelResult.m  Seed.m  Seeder.m  Stepper.m  TileResult.m
old/OrbitFoot/: CMakeLists.txt  orbitfoot.h
old/OrbitFoot/tests/: CMakeLists.txt  TestOrbitFoot.cxx
old/mvp/octave/: CMakeLists.txt  lonlatalt2xyz.m  mvpalgorithm.m  mvprefl_fast.m
src/: CMakeLists.txt  gen_synth_scene.cc  gen_synth_scene.h  imread_vw.cc  loadcam_vw.cc
src/OctaveVW/: CMakeLists.txt  imread_vw.cc  test.cc
src/OrbitFoot/: CMakeLists.txt  backproj_test.cc  orbitfoot.cc  orbitfoot.h
src/OrbitFoot/tests/: CMakeLists.txt  TestOrbitFoot.cxx
src/Tools/: CMakeLists.txt  print_pinhole.cc  vwconvert.cc
src/modules/: FindOctave.cmake
src/mvp/: CMakeLists.txt  Config.h.in  ConvexPolygon.cc  ConvexPolygon.h  GearmanWrappers.h  MVPAlgorithm.cc  MVPAlgorithm.h  MVPAlgorithmDesc.proto  MVPAlgorithmOptions.proto  MVPAlgorithmSettings.proto  MVPJob.cc  MVPJob.h  MVPJobBase.h  MVPJobImpl.cc  MVPJobImpl.h  MVPJobImplBase.cc  MVPJobImplBase.h  MVPJobQueue.h  MVPJobRequest.proto  MVPMessages.proto  MVPOperationDesc.proto  MVPTileProcessor.cc  MVPTileProcessor.h  MVPTileSeeder.cc  MVPTileSeeder.h  MVPTypes.h  MVPUserSettings.proto  MVPWorkspace.cc  MVPWorkspace.h  MVPWorkspaceDesc.proto  MVPWorkspaceRequest.proto  OrbitalImage.h  OrbitalImageCrop.cc  OrbitalImageCrop.h  OrbitalImageDesc.proto  OrbitalImageFile.h  OrbitalImageFileDesc.proto  OrbitalImageFileDescriptor.proto  OrbitalImageFootprint.cc  OrbitalImageFootprint.h  (+16 more)
src/mvp/Algorithm/: AlbedoBox.cc  AlbedoBox.h  AlgoBase.h  AlgorithmVar.cc  AlgorithmVar.h  CMakeLists.txt  Correlator.cc  Correlator.h  CorrelatorSettings.proto  Dummy.cc  Dummy.h  DummySettings.proto  Lighter.cc  Lighter.h  LighterSettings.proto  ObjectBase.h  Objective.cc  Objective.h  ObjectiveHelper.cc  ObjectiveHelper.h  ObjectiveSettings.proto  PatchBox.cc  PatchBox.h  PixelResult.cc  PixelResult.h  Seed.cc  Seed.h  Seeder.cc  Seeder.h  SeederSettings.proto  Stepper.cc  Stepper.h  StepperSettings.proto  TileResult.cc  TileResult.h  Types.h
src/mvp/Core/: AlgorithmSettings.proto  CMakeLists.txt  ConvexPolygon.cc  ConvexPolygon.h  GlobalSettings.proto  Settings.cc  Settings.h  SettingsParser.cc  SettingsParser.h
src/mvp/Frontend/: CMakeLists.txt  Messages.proto  Session.cc  Session.h  SessionDesc.proto  SessionStatus.cc  SessionStatus.h  StatusTable.cc  StatusTable.h  ZmqHelpers.cc  ZmqHelpers.h  ZmqServerHelper.cc  ZmqServerHelper.h  ZmqWorkerHelper.cc  ZmqWorkerHelper.h  loadjobfile.cc  mvpd.cc  mvpdumpjob.cc  mvpworker.cc
src/mvp/Geometry/: CMakeLists.txt  ConvexPolygon.cc  ConvexPolygon.h  Footprint.cc  Footprint.h  FootprintCollection.cc  FootprintCollection.h  FootprintProjector.cc  FootprintProjector.h
src/mvp/Image/: CMakeLists.txt  ImageCrop.cc  ImageCrop.h  ImageCropCollection.cc  ImageCropCollection.h  OrbitalImage.cc  OrbitalImage.h  OrbitalImageCatalog.cc  OrbitalImageCatalog.h  OrbitalImageCollection.cc  OrbitalImageCollection.h  OrbitalImageDesc.proto
src/mvp/Octave/: CMakeLists.txt  Conversions.cc  Conversions.h  Main.cc  Main.h  MvpWrapper.cc  MvpWrapper.h  OctaveCast.h  OctaveStepper.h  OctaveWrap.h  OctaveWrapper.cc  OctaveWrapper.h  imread_vw.cc  init_mvp.cc  mosaic.m  oct-cast.h  oct-mvpclass.h  oct-mvpobj.h  oct-typetraits.h  ov-mvpclass-ref.cc  ov-mvpclass-ref.h  ov-mvpobj-ref.cc  ov-mvpobj-ref.h  wrap.h
src/mvp/OrbitalImage/: CMakeLists.txt  ConvexPolygon.cc  ConvexPolygon.h  Footprint.cc  Footprint.h  FootprintCollection.cc  FootprintCollection.h  OrbitalImage.proto
src/mvp/Pipeline/: AlgorithmSettings.proto  CMakeLists.txt  ConvexPolygon.cc  ConvexPolygon.h  Job.cc  Job.h  JobDesc.proto  OrbitalImage.proto  Session.cc  Session.h  SessionDesc.proto
src/mvp/Wrapper/: CMakeLists.txt  Dummy.h  MvpWrapper.h  OctaveWrapper.cc  OctaveWrapper.h  Stepper.h  Types.h
src/mvp/notes/: test.cc
src/mvp/octave/: CMakeLists.txt  _mvpalgorithm_alt.m  _mvpalgorithm_orientation.m  _mvpalgorithm_windows.m  _mvprefl_findH.m  _mvprefl_testhelpers.m  _porthoproj_impl.m  _porthoproj_impl_ref.m  gausskernel.m  geotrans.m  loadjobfile.cc  lonlat2normal.m  lonlatalt2xyz.m  mvpalgorithm.m  mvpfootprint.m  mvpobj.m  mvpoptimset.m  mvppatches.m  mvpproj.m  mvprefl.m  mvptestalgorithm.m  offsetgeoref.m  porthoproj.m  runtest.m
src/mvp/old/: Config.h.in  MVPAlgorithm.h  MVPAlgorithmOptions.proto  MVPJobRequest.proto  MVPMessages.proto  MVPUserSettings.proto  mvpadmin.py  mvpdumpjob.cc
src/mvp/tests/: AS15-M-0074.lev1.pinhole  AS15-M-0075.lev1.pinhole  AS15-M-0076.lev1.pinhole  CMakeLists.txt  TestConvexPolygon.cxx  TestMVPAlgorithm.cxx  TestMVPJob.cxx  TestMVPJobImpl.cxx  TestMVPJobImplBase.cxx  TestMVPTileProcessor.cxx  TestMVPTileSeeder.cxx  TestMVPWorkspace.cxx  TestOrbitalImage.cxx  TestOrbitalImageCrop.cxx  TestOrbitalImageFile.cxx  TestOrbitalImageFootprint.cxx  TestPolygonMath.cxx  dummy_image.tif  synth-ground-DRG.tif
src/test/: CMakeLists.txt  Helpers.h  README  loadtestenv.m.in  test_main.cc
src/test/data/: synth.2.pinhole
src/tools/: CMakeLists.txt  gen_synth_scene.cc  gen_synth_scene.h  plate2image.cc
src/vw/: CMakeLists.txt
src/vw/Octave/: CMakeLists.txt  Conversions.cc  Conversions.h  Conversions.hh  Main.cc  Main.h  imread_vw.cc  loadcam_vw.cc
src/vwoctave/: CMakeLists.txt  Conversions.h  imread_vw.cc  loadcam_vw.cc
src/vwoctave/tests/: AS15-M-0073.lev1.pinhole  CMakeLists.txt  (+1 more)
(+390 files in other folders)
